--- a/package.json
+++ b/package.json
@@ -6,27 +6,30 @@
     "url": "https://github.com/pahud/cdk-fargate-patterns.git"
   },
   "scripts": {
-    "clobber": "npx projen clobber",
-    "compile": "npx projen compile",
-    "test:compile": "npx projen test:compile",
-    "test": "npx projen test",
     "build": "npx projen build",
-    "test:watch": "npx projen test:watch",
-    "test:update": "npx projen test:update",
     "bump": "npx projen bump",
-    "unbump": "npx projen unbump",
-    "publish:github": "npx projen publish:github",
-    "default": "npx projen default",
-    "watch": "npx projen watch",
-    "package": "npx projen package",
-    "eslint": "npx projen eslint",
+    "clobber": "npx projen clobber",
     "compat": "npx projen compat",
-    "publish:npm": "npx projen publish:npm",
-    "publish:pypi": "npx projen publish:pypi",
+    "compile": "npx projen compile",
+    "default": "npx projen default",
     "docgen": "npx projen docgen",
+    "eject": "npx projen eject",
+    "eslint": "npx projen eslint",
     "gitpod:prebuild": "npx projen gitpod:prebuild",
+    "package": "npx projen package",
+    "package-all": "npx projen package-all",
+    "package:js": "npx projen package:js",
+    "package:python": "npx projen package:python",
+    "post-compile": "npx projen post-compile",
+    "post-upgrade": "npx projen post-upgrade",
+    "pre-compile": "npx projen pre-compile",
     "release": "npx projen release",
+    "test": "npx projen test",
+    "test:update": "npx projen test:update",
+    "test:watch": "npx projen test:watch",
+    "unbump": "npx projen unbump",
     "upgrade": "npx projen upgrade",
+    "watch": "npx projen watch",
     "projen": "npx projen"
   },
   "author": {
@@ -35,64 +38,38 @@
     "organization": false
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^1.95.2",
     "@types/jest": "^26.0.24",
-    "@types/node": "^14.17.0",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "eslint": "^7.32.0",
+    "@types/node": "^12",
+    "@typescript-eslint/eslint-plugin": "^5",
+    "@typescript-eslint/parser": "^5",
+    "aws-cdk-lib": "2.11.0",
+    "cdk-nag": "2.0.0",
+    "constructs": "10.0.5",
+    "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.6",
-    "eslint-import-resolver-typescript": "^2.5.0",
-    "eslint-plugin-import": "^2.24.2",
-    "jest": "^27.2.5",
-    "jest-junit": "^12",
-    "jsii": "^1.38.0",
-    "jsii-diff": "^1.38.0",
-    "jsii-docgen": "^3.7.0",
-    "jsii-pacmak": "^1.38.0",
-    "json-schema": "^0.3.0",
-    "npm-check-updates": "^11",
-    "projen": "^0.29.13",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-plugin-import": "^2.26.0",
+    "jest": "^27.5.1",
+    "jest-junit": "^13",
+    "jsii": "^1.57.0",
+    "jsii-diff": "^1.57.0",
+    "jsii-docgen": "^3.8.31",
+    "jsii-pacmak": "^1.57.0",
+    "json-schema": "^0.4.0",
+    "npm-check-updates": "^12",
+    "projen": "^0.54.34",
     "standard-version": "^9",
-    "ts-jest": "^27.0.5",
-    "typescript": "^4.4.3"
+    "ts-jest": "^27.1.4",
+    "typescript": "^4.6.3"
   },
   "peerDependencies": {
-    "@aws-cdk/aws-certificatemanager": "^1.95.2",
-    "@aws-cdk/aws-ec2": "^1.95.2",
-    "@aws-cdk/aws-ecs": "^1.95.2",
-    "@aws-cdk/aws-efs": "^1.95.2",
-    "@aws-cdk/aws-elasticloadbalancingv2": "^1.95.2",
-    "@aws-cdk/aws-events": "^1.95.2",
-    "@aws-cdk/aws-events-targets": "^1.95.2",
-    "@aws-cdk/aws-iam": "^1.95.2",
-    "@aws-cdk/aws-lambda": "^1.95.2",
-    "@aws-cdk/aws-logs": "^1.95.2",
-    "@aws-cdk/aws-rds": "^1.95.2",
-    "@aws-cdk/aws-route53": "^1.95.2",
-    "@aws-cdk/aws-route53-targets": "^1.95.2",
-    "@aws-cdk/aws-secretsmanager": "^1.95.2",
-    "@aws-cdk/core": "^1.95.2",
-    "constructs": "^3.2.27"
+    "aws-cdk-lib": "^2.11.0",
+    "cdk-nag": "^2.0.0",
+    "constructs": "^10.0.5"
   },
   "dependencies": {
-    "@aws-cdk/aws-certificatemanager": "^1.95.2",
-    "@aws-cdk/aws-ec2": "^1.95.2",
-    "@aws-cdk/aws-ecs": "^1.95.2",
-    "@aws-cdk/aws-efs": "^1.95.2",
-    "@aws-cdk/aws-elasticloadbalancingv2": "^1.95.2",
-    "@aws-cdk/aws-events": "^1.95.2",
-    "@aws-cdk/aws-events-targets": "^1.95.2",
-    "@aws-cdk/aws-iam": "^1.95.2",
-    "@aws-cdk/aws-lambda": "^1.95.2",
-    "@aws-cdk/aws-logs": "^1.95.2",
-    "@aws-cdk/aws-rds": "^1.95.2",
-    "@aws-cdk/aws-route53": "^1.95.2",
-    "@aws-cdk/aws-route53-targets": "^1.95.2",
-    "@aws-cdk/aws-secretsmanager": "^1.95.2",
-    "@aws-cdk/core": "^1.95.2"
+    "cdk-nag": "^2.0.0"
   },
-  "bundledDependencies": [],
   "keywords": [
     "aws",
     "cdk",
@@ -104,8 +81,8 @@
   "version": "0.0.0",
   "jest": {
     "testMatch": [
-      "**/__tests__/**/*.ts?(x)",
-      "**/?(*.)+(spec|test).ts?(x)"
+      "<rootDir>/src/**/__tests__/**/*.ts?(x)",
+      "<rootDir>/(test|src)/**/?(*.)+(spec|test).ts?(x)"
     ],
     "clearMocks": true,
     "collectCoverage": true,
@@ -113,6 +90,7 @@
       "json",
       "lcov",
       "clover",
+      "cobertura",
       "text"
     ],
     "coverageDirectory": "coverage",
@@ -137,7 +115,7 @@
     "preset": "ts-jest",
     "globals": {
       "ts-jest": {
-        "tsconfig": "tsconfig.jest.json"
+        "tsconfig": "tsconfig.dev.json"
       }
     }
   },
