fix: projen upgrade

--- a/.npmignore
+++ b/.npmignore
@@ -3,6 +3,7 @@
 /test-reports/
 junit.xml
 /coverage/
+permissions-backup.acl
 /dist/changelog.md
 /dist/version.txt
 /.mergify.yml
@@ -30,3 +31,4 @@ website/public
 images
 docs
 website
+/.gitattributes
