--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "pre-compile": "npx projen pre-compile",
     "release": "npx projen release",
     "test": "npx projen test",
-    "test:update": "npx projen test:update",
     "test:watch": "npx projen test:watch",
     "unbump": "npx projen unbump",
     "upgrade": "npx projen upgrade",
@@ -38,37 +37,40 @@
     "organization": false
   },
   "devDependencies": {
-    "@types/jest": "^27.4.1",
-    "@types/node": "^12",
-    "@typescript-eslint/eslint-plugin": "^5",
-    "@typescript-eslint/parser": "^5",
+    "@types/jest": "^27",
+    "@types/node": "^16 <= 16.18.78",
+    "@typescript-eslint/eslint-plugin": "^7",
+    "@typescript-eslint/parser": "^7",
     "aws-cdk-lib": "2.148.0",
-    "cdk-nag": "^2.28.158",
     "constructs": "10.0.5",
     "eslint": "^8",
-    "eslint-import-resolver-node": "^0.3.6",
     "eslint-import-resolver-typescript": "^2.7.1",
-    "eslint-plugin-import": "^2.26.0",
-    "jest": "^27.5.1",
-    "jest-junit": "^13",
-    "jsii": "^1.57.0",
-    "jsii-diff": "^1.57.0",
-    "jsii-docgen": "^6.3.15",
-    "jsii-pacmak": "^1.57.0",
-    "json-schema": "^0.4.0",
-    "npm-check-updates": "^12",
-    "projen": "^0.54.34",
+    "eslint-plugin-import": "^2.29.1",
+    "jest": "^27",
+    "jest-junit": "^15",
+    "jsii": "1.x",
+    "jsii-diff": "^1.101.0",
+    "jsii-docgen": "^6.3.27",
+    "jsii-pacmak": "^1.101.0",
+    "jsii-rosetta": "1.x",
+    "projen": "^0.84.3",
     "standard-version": "^9",
-    "ts-jest": "^27.1.4",
-    "typescript": "^4.6.3"
+    "ts-jest": "^27",
+    "typescript": "^4.9.5"
   },
   "peerDependencies": {
     "aws-cdk-lib": "^2.148.0",
-    "cdk-nag": "^2.28.158",
     "constructs": "^10.0.5"
   },
   "dependencies": {
     "cdk-nag": "^2.28.158"
+  },
+  "bundledDependencies": [
+    "cdk-nag"
+  ],
+  "resolutions": {
+    "@types/babel__traverse": "7.18.2",
+    "@types/prettier": "2.6.0"
   },
   "keywords": [
     "aws",
@@ -78,11 +80,15 @@
   ],
   "main": "lib/index.js",
   "license": "Apache-2.0",
+  "publishConfig": {
+    "access": "public"
+  },
   "version": "0.0.0",
   "jest": {
+    "coverageProvider": "v8",
     "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.ts?(x)",
-      "<rootDir>/(test|src)/**/?(*.)+(spec|test).ts?(x)"
+      "<rootDir>/@(src|test)/**/?(*.)+(spec|test).ts?(x)",
+      "<rootDir>/@(src|test)/**/__tests__/**/*.ts?(x)"
     ],
     "clearMocks": true,
     "collectCoverage": true,
